--- a/demo.html
+++ b/demo.html
@@ -2,12 +2,19 @@
 <html>
     <head>
         <title>block.js demo</title>
-        <script type = 'text/javascript' src = './block.js'></script>
+        <script src = 'block.js'></script>
+        <script src = 'demo.block'></script>
         <script type = 'text/javascript'>
           function load() {
             // generate html blocks
             Block()
-                .add('text', 'Hello World')
+                .mark('main')
+                .load('demo')
+                .add('text1', 'text')
+                .add('', 'break')
+                .add('image1', 'image')
+                .add('', 'break')
+                .add('input1', 'input')
             .fill(document.body);
           }
         </script>
