--- a/demo/demo.html
+++ b/demo/demo.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>block.js demo</title>
-        <script src = 'block.js'></script>
-        <script src = 'blocks.js'></script>
+        <script src = '../block.js'></script>
+        <script src = '../blocks.js'></script>
         <script src = 'demo.js'></script>
     </head>
     <body onload = 'load()'>
