update block site

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         hey
-        <img src = './img/css3.png'/>
+        <img src = './img/logo/css3.png'/>
     </body>
 </html>
