--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>block.js API</title>
     </head>
     <body>
-        hey
-        <img src = './img/logo/css3.png'/>
+        <br/>
+        <img src = './img/logo/512/html5.png' style = 'margin: 0 auto; display: block;'/>
     </body>
 </html>
