--- a/demo/demo.html
+++ b/demo/demo.html
@@ -3,10 +3,10 @@
     <head>
         <title>block.js demo</title>
         <script src = '../block.js'></script>
-        <script src = '../blocks.js'></script>
+        <script src = 'blocks.js'></script>
         <script src = 'demo.js'></script>
     </head>
-    <body onload = 'load()'>
+    <body>
         <!-- blocks are placed here -->
     </body>
 </html>
