--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>block.js API</title>
+        <title>block.js</title>
     </head>
     <body>
-        <br/>
-        <img src = './img/logo/512/html5.png' style = 'margin: 0 auto; display: block;'/>
+        coming soon
     </body>
 </html>
